# joinly

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: modules.md
joinly/: ai.py  join.py  prompts.py
tests/: test_join.py
